--- a/app/src/main/res/navigation/root.xml
+++ b/app/src/main/res/navigation/root.xml
@@ -8,5 +8,14 @@
     <fragment
         android:id="@+id/LoginFragment"
         android:name="com.example.igeniusandroidtest.ui.login.LoginFragment"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/to_loading"
+            app:destination="@id/LoadingFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/LoadingFragment"
+        android:name="com.example.igeniusandroidtest.ui.loading.LoadingFragment"
+        tools:layout="@layout/fragment_loading" />
 </navigation>
