--- a/app/src/main/res/navigation/root.xml
+++ b/app/src/main/res/navigation/root.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/LoginFragment"
         android:name="com.example.igeniusandroidtest.ui.login.LoginFragment"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/to_loading"
             app:destination="@id/LoadingFragment" />
@@ -17,5 +17,27 @@
     <fragment
         android:id="@+id/LoadingFragment"
         android:name="com.example.igeniusandroidtest.ui.loading.LoadingFragment"
-        tools:layout="@layout/fragment_loading" />
+        tools:layout="@layout/fragment_loading">
+        <action
+            android:id="@+id/go_to_home"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.igeniusandroidtest.ui.home.HomeFragment"
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/go_to_detail"
+            app:destination="@id/detailedFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailedFragment"
+        android:name="com.example.igeniusandroidtest.ui.detailed.DetailedFragment"
+        android:label="DetailedFragment">
+        <action
+            android:id="@+id/action_detailedFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@layout/fragment_home"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
