feat Login oauth: implementation of the user authentication process post login
Finalized the network engine for apis call and the arch design

--- a/app/src/main/res/xml/fragment_loading_scene.xml
+++ b/app/src/main/res/xml/fragment_loading_scene.xml
@@ -21,5 +21,6 @@
     <Transition
         app:autoTransition="animateToEnd"
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start" />
+        app:constraintSetStart="@+id/start"
+        app:duration="4000"/>
 </MotionScene>
