--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/octocats_github_logo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="-100dp"
+        android:layout_marginStart="-100dp"/>
 </androidx.constraintlayout.motion.widget.MotionLayout>
