--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,30 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.IGeniusAndroidTest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.IGeniusAndroidTest" parent="Theme.Material3.Dark">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="materialButtonStyle">@style/Widget.Ignius.Button.Elevated.Icon</item>
+
+        <item name="colorOutline">@color/white</item>
+        <!--<item name="colorSurface">#10000000</item>-->
+        <!--  <item name="colorOnSurface">@android:color/holo_purple</item>-->
+        <!--<item name="colorPrimaryContainer">@color/white</item>-->
+        <!--<item name="colorOnPrimaryContainer">@color/white</item>-->
+        <!--<item name="colorSecondaryContainer">@color/white</item>-->
+        <!--<item name="colorOnSecondaryContainer">@color/white</item>-->
+        <!--<item name="colorTertiary">@color/white</item>-->
+        <!--<item name="colorTertiaryContainer">@color/white</item>-->
+        <!--<item name="colorOnTertiaryContainer">@color/white</item>-->
+        <!--<item name="colorOnTertiary">@color/white</item>-->
     </style>
 </resources>
