--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/image_view_github_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleX=".5"
         android:scaleY=".5"
         android:src="@drawable/octocats_github_logo"
