--- a/app/src/main/res/xml/fragment_loading_scene.xml
+++ b/app/src/main/res/xml/fragment_loading_scene.xml
@@ -9,8 +9,8 @@
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@id/image_view_github_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleX=".5"
             android:scaleY=".5"
             app:layout_constraintEnd_toEndOf="parent"
