--- a/app/src/main/res/navigation/root.xml
+++ b/app/src/main/res/navigation/root.xml
@@ -33,11 +33,14 @@
     <fragment
         android:id="@+id/detailedFragment"
         android:name="com.example.igeniusandroidtest.ui.detailed.DetailedFragment"
-        android:label="DetailedFragment">
+        tools:layout="@layout/fragment_detailed">
         <action
             android:id="@+id/action_detailedFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:popUpTo="@layout/fragment_home"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="id"
+            app:argType="integer" />
     </fragment>
 </navigation>
