--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -8,8 +8,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_18"
-        app:cardElevation="@dimen/card_repository_elevation">
+        android:layout_margin="18dp"
+        app:cardElevation="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/card_container"
