--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -13,6 +13,8 @@
         android:src="@drawable/octocats_github_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="-100dp"
-        android:layout_marginStart="-100dp"/>
+        android:scaleX="2"
+        android:scaleY="2"
+        android:layout_marginBottom="-50dp"
+        android:layout_marginStart="-50dp"/>
 </androidx.constraintlayout.motion.widget.MotionLayout>
