--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -29,48 +30,96 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_username"
+                android:id="@+id/text_view_label_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:layout_weight="1"
+                android:text="@string/name_label"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_star" />
+
+            <TextView
+                android:id="@+id/text_view_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="placeholder"
-                app:layout_constraintBottom_toTopOf="@+id/text_view_description"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_star"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_name"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_name"
+                app:layout_constraintTop_toBottomOf="@id/text_view_label_name"
+                tools:text="placeholder" />
+
+            <TextView
+                android:id="@+id/text_view_label_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1"
+                android:text="@string/descritption_label"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/text_view_name"
+                app:layout_constraintStart_toStartOf="@id/text_view_name"
+                app:layout_constraintTop_toBottomOf="@id/text_view_name" />
 
             <TextView
                 android:id="@+id/text_view_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="placeholder"
-                app:layout_constraintBottom_toTopOf="@+id/text_view_language"
-                app:layout_constraintStart_toStartOf="@id/text_view_username"
-                app:layout_constraintTop_toBottomOf="@id/text_view_username"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_description"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_description"
+                app:layout_constraintTop_toBottomOf="@id/text_view_label_description"
+                tools:text="placeholder" />
+
+            <TextView
+                android:id="@+id/text_view_label_language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1"
+                android:text="@string/language_label"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_description"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_description"
+                app:layout_constraintTop_toBottomOf="@id/text_view_description" />
 
             <TextView
                 android:id="@+id/text_view_language"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="placeholder"
-                app:layout_constraintBottom_toTopOf="@+id/text_view_id"
-                app:layout_constraintStart_toStartOf="@id/text_view_description"
-                app:layout_constraintTop_toBottomOf="@id/text_view_description"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_language"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_language"
+                app:layout_constraintTop_toBottomOf="@id/text_view_label_language"
+                tools:text="placeholder" />
+
+            <TextView
+                android:id="@+id/text_view_label_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1"
+                android:text="@string/id_label"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_language"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_language"
+                app:layout_constraintTop_toBottomOf="@id/text_view_language" />
 
             <TextView
                 android:id="@+id/text_view_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="placeholder"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/text_view_language"
-                app:layout_constraintTop_toBottomOf="@id/text_view_language"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintEnd_toEndOf="@id/text_view_label_id"
+                app:layout_constraintStart_toStartOf="@id/text_view_label_id"
+                app:layout_constraintTop_toBottomOf="@id/text_view_label_id"
+                tools:text="placeholder" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </ScrollView>
